--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
         <div class="container">
             <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=80" alt="Foto de perfil" class="hero-img">
             <div class="hero-content">
-                <h1>Juan Pérez</h1>
+                <h1>Paolo Villavicencio Merella</h1>
                 <p>Estudiante de Ciencias de la Computación en la UNMSM</p>
                 <p>Lima, Perú</p>
                 <a href="#social" class="btn">Contáctame</a>
@@ -329,7 +329,7 @@
             <h2 class="section-title">Sobre Mí</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <h3>Mi Trayectoria</h3>
+                    <h3>Resumen</h3>
                     <p>Soy un apasionado estudiante de Ciencias de la Computación en la Universidad Nacional Mayor de San Marcos. Desde pequeño me ha fascinado el mundo de la tecnología y cómo esta puede transformar la sociedad.</p>
                     <p>Mi objetivo es especializarme en inteligencia artificial y desarrollo de software, contribuyendo a proyectos innovadores que tengan un impacto positivo en la comunidad.</p>
                 </div>
@@ -337,7 +337,7 @@
                     <div class="detail-item">
                         <h3><i class="fas fa-graduation-cap"></i> Educación</h3>
                         <p><strong>Universidad Nacional Mayor de San Marcos</strong></p>
-                        <p>Ciencias de la Computación - Estudiante de 5to ciclo</p>
+                        <p>Ciencias de la Computación - Estudiante de 4to ciclo</p>
                     </div>
                     <div class="detail-item">
                         <h3><i class="fas fa-map-marker-alt"></i> Ubicación</h3>
@@ -354,7 +354,7 @@
             <h2 class="section-title">Mi Motivación</h2>
             <div class="motivation-content">
                 <p>Elegí la carrera de Ciencias de la Computación porque siempre me ha fascinado la capacidad de crear soluciones innovadoras a través del código. La tecnología avanza a pasos agigantados y quiero ser parte de esa revolución, contribuyendo con proyectos que tengan un impacto real en la sociedad.</p>
-                <p>La Universidad Nacional Mayor de San Marcos me ha brindado una base sólida en fundamentos teóricos y prácticos, permitiéndome explorar diversas áreas como la inteligencia artificial, el desarrollo web y la ciencia de datos.</p>
+                <p>La Universidad Nacional Mayor de San Marcos me esta brindando una base sólida en fundamentos teóricos y prácticos, permitiéndome explorar diversas áreas como la inteligencia artificial, el desarrollo web y la ciencia de datos.</p>
                 <p>Mi motivación diaria es el deseo constante de aprender y superarme, enfrentando nuevos retos que me permitan crecer tanto personal como profesionalmente.</p>
             </div>
         </div>
@@ -370,14 +370,14 @@
                         <i class="fas fa-code"></i>
                     </div>
                     <h3>Programación</h3>
-                    <p>Disfruto desarrollar proyectos personales y participar en hackathons para mejorar mis habilidades.</p>
+                    <p>Disfruto desarrollar proyectos personales y aprender nuevos lenguajes de programación.</p>
                 </div>
                 <div class="hobby-card">
                     <div class="hobby-icon">
                         <i class="fas fa-book"></i>
                     </div>
-                    <h3>Lectura</h3>
-                    <p>Me encanta leer libros de ciencia ficción y tecnología para expandir mis horizontes.</p>
+                    <h3>Películas y series</h3>
+                    <p>Me encanta ver peliculas y series de ciencia ficción y tecnología para expandir mi creatividad.</p>
                 </div>
                 <div class="hobby-card">
                     <div class="hobby-icon">
@@ -390,8 +390,8 @@
                     <div class="hobby-icon">
                         <i class="fas fa-hiking"></i>
                     </div>
-                    <h3>Senderismo</h3>
-                    <p>Explorar los paisajes naturales del Perú es una de mis actividades favoritas los fines de semana.</p>
+                    <h3>Lectura</h3>
+                    <p>Suelo leer en mis ratos libres sobre revistas, articulos y libros de tecnología para mantenerme informado de los avances en el mundo.</p>
                 </div>
             </div>
         </div>
@@ -415,10 +415,10 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <div class="footer-logo">Portfolio</div>
+            <div class="footer-logo">My page</div>
             <p>Estudiante de Ciencias de la Computación - UNMSM</p>
             <p>Lima, Perú</p>
-            <p>© 2023 Todos los derechos reservados</p>
+            <p>© 2025 Todos los derechos reservados</p>
         </div>
     </footer>
 </body>
