--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <header>
         <div class="container">
             <nav>
-                <div class="logo">my page</div>
+                <div class="logo">My page</div>
                 <ul class="nav-links">
                     <li><a href="#about">Sobre Mí</a></li>
                     <li><a href="#motivation">Motivación</a></li>
